k8s/go-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: go-app
          image: alexandrevoliveira/docker-go-ir
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512M"
              cpu: "0.5"
            limits:
              memory: "1024M"
              cpu: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: DoesNotExist
                # operator: In
                # values:
                # - us-east1
                # - us-west1
