k8s/go-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
    - port: 3000
      targetPort: 3000
