k8s/go-app-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-node-port-service
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - port: 3001
      targetPort: 3000
